# kvs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: command.rs  globber.rs  kvdb.rs  lib.rs  lines.rs  logdb.rs  parts.rs  result.rs
tests/: tests.rs
