[package]
name = "kvs"
version = "0.1.0"
authors = ["Chris Dawes <cmsd2@cantab.net>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
failure = "0.1.5"
serde = { version = "1.0.92", features = ["derive"] }
serde_json = "1.0.39"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"

[[bin]]
name = "kvs"
test = false
doctest = false

[lib]
test = false
doctest = false
